bug: fixed css for date input calendar indicator in dark mode

--- a/admin/templates/clean/css/darkmode.css
+++ b/admin/templates/clean/css/darkmode.css
@@ -37,4 +37,7 @@
             }
         }
     }
+    input[type="date"]::-webkit-calendar-picker-indicator {
+        filter: invert(1);
+    }
 }
